tests/baselines/reference/parserAmbiguity3.errors.txt
==== tests/cases/compiler/parserAmbiguity3.ts (4 errors) ====
    f(g < A, B > +(7));
    ~
!!! parserAmbiguity3.ts(1,1): error TS2095: Cannot find name 'f'.
      ~
!!! parserAmbiguity3.ts(1,3): error TS2095: Cannot find name 'g'.
          ~
!!! parserAmbiguity3.ts(1,7): error TS2095: Cannot find name 'A'.
             ~
!!! parserAmbiguity3.ts(1,10): error TS2095: Cannot find name 'B'.